--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -15,7 +15,7 @@
             <h:commandLink action="/encounterMember/List" value="戦闘メンバー一覧"/>
         </h:form>
         <h:form>
-            <h:commandLink action="/encounterCharacter/List" value="キャラクター一覧"/>
+            <h:commandLink action="/characterRecord/List" value="キャラクター一覧"/>
         </h:form>
         <h:form>
             <h:commandLink action="/encounterRecord/List" value="エンカウンター一覧"/>
@@ -27,41 +27,15 @@
             <h:commandLink action="/scenarioRecord/List" value="シナリオ一覧"/>
         </h:form>            
         </p>            
-        <h:form>
-            <h:commandLink action="/abilityMaster/List" value="Show All AbilityMaster Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/diceMaster/List" value="Show All DiceMaster Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/monsterAbilityRecord/List" value="Show All MonsterAbilityRecord Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/monsterSaveRecord/List" value="Show All MonsterSaveRecord Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/monsterSkillRecord/List" value="Show All MonsterSkillRecord Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/monsterSubType/List" value="Show All MonsterSubType Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/saveMaster/List" value="Show All SaveMaster Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/sizeMaster/List" value="Show All SizeMaster Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
-        </h:form>
+</h:body>
 
-        <h:form>
-            <h:commandLink action="/alignmentMaster/List" value="Show All AlignmentMaster Items"/>
-        </h:form>
-        <h:form>
-            <h:commandLink action="/typeMaster/List" value="Show All TypeMaster Items"/>
-        </h:form>
-    </h:body>
+
+
+
+
+
+
+
 
 
 
