--- a/web/sizeMaster/View.xhtml
+++ b/web/sizeMaster/View.xhtml
@@ -21,6 +21,10 @@
                     <h:outputText value="#{sizeMasterController.selected.sizeName}" title="#{bundle.ViewSizeMasterTitle_sizeName}"/>
                     <h:outputText value="#{bundle.ViewSizeMasterLabel_acModifier}"/>
                     <h:outputText value="#{sizeMasterController.selected.acModifier}" title="#{bundle.ViewSizeMasterTitle_acModifier}"/>
+                    <h:outputText value="#{bundle.ViewSizeMasterLabel_reach}"/>
+                    <h:outputText value="#{sizeMasterController.selected.reach}" title="#{bundle.ViewSizeMasterTitle_reach}"/>
+                    <h:outputText value="#{bundle.ViewSizeMasterLabel_contactSpace}"/>
+                    <h:outputText value="#{sizeMasterController.selected.contactSpace}" title="#{bundle.ViewSizeMasterTitle_contactSpace}"/>
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{sizeMasterController.destroyAndView}" value="#{bundle.ViewSizeMasterDestroyLink}"/>
