--- a/web/sizeMaster/Create.xhtml
+++ b/web/sizeMaster/Create.xhtml
@@ -21,6 +21,10 @@
                     <h:inputText id="sizeName" value="#{sizeMasterController.selected.sizeName}" title="#{bundle.CreateSizeMasterTitle_sizeName}" />
                     <h:outputLabel value="#{bundle.CreateSizeMasterLabel_acModifier}" for="acModifier" />
                     <h:inputText id="acModifier" value="#{sizeMasterController.selected.acModifier}" title="#{bundle.CreateSizeMasterTitle_acModifier}" />
+                    <h:outputLabel value="#{bundle.CreateSizeMasterLabel_reach}" for="reach" />
+                    <h:inputText id="reach" value="#{sizeMasterController.selected.reach}" title="#{bundle.CreateSizeMasterTitle_reach}" />
+                    <h:outputLabel value="#{bundle.CreateSizeMasterLabel_contactSpace}" for="contactSpace" />
+                    <h:inputText id="contactSpace" value="#{sizeMasterController.selected.contactSpace}" title="#{bundle.CreateSizeMasterTitle_contactSpace}" />
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{sizeMasterController.create}" value="#{bundle.CreateSizeMasterSaveLink}" />
