--- a/web/encounterRecord/View.xhtml
+++ b/web/encounterRecord/View.xhtml
@@ -21,12 +21,16 @@
                 <h:outputText value="#{encounterRecordController.selected.comments}" />
                 <h:commandButton action="#{encounterRecordController.editCurrentEncounter}" value="編集"/>
                 <br/><br/>
-                <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン"/>
+                <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン" styleClass="smallBold" />
                 <h:outputLabel value=" "/>                
                 <h:commandButton action="#{encounterMemberController.previousTurn()}" value="前のターン"/>                                
                 <h:outputLabel value=" "/>
-                <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="セーブとソート"/>                        
-
+                <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="セーブ" styleClass="smallBold"/>  
+                <h:panelGrid columns="3">
+                    <h:commandLink value="ラウンドの最初へ" action="#{encounterMemberController.resetRound}"/>
+                    <h:outputLabel value="  "/>                     
+                    <h:commandLink value="戦闘の最初に戻る" action="#{encounterMemberController.resetBattle}"/>                    
+                </h:panelGrid>                
                 <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">
 
                     <h:dataTable value="#{encounterMemberController.encounterMemberList}" var="member" border="0" 
@@ -38,31 +42,41 @@
                             </f:facet>
                             <h:outputText value="●" style="font-size: 17px; color: red" rendered="#{member.myTurn}"/>
                         </h:column>                        
-                        <h:column>
+                        <h:column >
                             <f:facet name="header">
                                 <h:outputText value="名前" />
                             </f:facet>
-                            <h:outputText value="#{member.scenarioCharacterRecord.name}" style="color: #{encounterMemberController.hpColor}"/>
+                            <h:outputText value="#{member.scenarioCharacterRecord.name}" style="color: #{encounterMemberController.hpColor}" styleClass="smallText"/>
+                            <h:commandLink value=" [クラス]" title="#{member.scenarioCharacterRecord.klass}" styleClass="smallText"/>                            
                         </h:column>         
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="クラス"/>
+                                <h:outputText value="攻撃" />
                             </f:facet>
-                            <h:outputText value="#{member.scenarioCharacterRecord.klass}"/>
+                            <h:commandLink value="通常" title="#{member.scenarioCharacterRecord.attack}" styleClass="smallText" />
+                            <h:outputLabel value=" "/>
+                            <h:commandLink value="全力" title="#{member.scenarioCharacterRecord.fullAttack}" styleClass="smallText"/>                            
+                            <h:outputLabel value=" "/>                            
+                            <h:commandLink value="特殊" title="#{member.scenarioCharacterRecord.specialAttacks}" styleClass="smallText"/>
                         </h:column>
-
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="ヒットダイス"/>
+                                <h:outputText value="AC"/>
                             </f:facet>
-                            <h:outputText value="#{member.scenarioCharacterRecord.hitDice}"/>
+                            <h:outputText value="#{member.scenarioCharacterRecord.armorClass}" styleClass="smallText"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="ヒットダイス" />
+                            </f:facet>
+                            <h:outputText value="#{member.scenarioCharacterRecord.hitDice}" styleClass="smallText"/>
                         </h:column>  
 
                         <h:column>
                             <f:facet name="header" >
                                 <h:outputText value="HP"/>
                             </f:facet>
-                            <h:inputText value="#{member.scenarioCharacterRecord.hitPoint}" style="width: 30px; color: #{encounterMemberController.hpColor}"/>
+                            <h:inputText value="#{member.scenarioCharacterRecord.hitPoint}" style="width: 30px; color: #{encounterMemberController.hpColor}" styleClass="smallText"/>
                         </h:column>
 
                         <h:column>
@@ -83,28 +97,28 @@
                             <f:facet name="header">
                                 <h:outputText value="コメント"/>
                             </f:facet>
-                            <h:inputText value="#{member.comments}"/>
+                            <h:inputText value="#{member.comments}" styleClass="smallText"/>
                         </h:column>
                         
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value=""/>
                             </f:facet>
-                            <h:commandLink action="#{encounterMemberController.decommission}" value="はずす"/>
+                            <h:commandLink action="#{encounterMemberController.decommission}" value="はずす" styleClass="smallText"/>
                         </h:column>
                     </h:dataTable>
                 </h:panelGroup>              
 
-                <h:panelGrid columns="4">
-                    <h:commandButton value="ラウンドの最初へ" action="#{encounterMemberController.resetRound}"/>
-                    <h:commandButton value="戦闘の最初に戻る" action="#{encounterMemberController.resetBattle}"/>                    
+
+                <h:panelGrid columns="2">
                     <h:commandButton value="イニシアチブランダム入力" action="#{encounterMemberController.setInitiativeByRandom}"/>                                        
                     <h:commandButton value="HPをリセット" action="#{encounterMemberController.setInitialHitPoint()}"/>                                                            
-                    <h:commandButton value="プレイヤーキャラクターを再読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}"/>                                                                                
                 </h:panelGrid>
-                <br/>
-                <h:commandLink action="#{monsterSelectionController.prepareList}" styleClass="smallBold" value="モンスターを追加" immediate="true"/>
-                <br/>
+                <h:panelGrid columns="3">
+                <h:commandLink value="モンスターを追加" action="#{monsterSelectionController.prepareList}" styleClass="smallBold" immediate="true"/>                
+                <h:outputLabel value="   "/> 
+                <h:commandLink value="PC を再読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}" styleClass="smallBold"/>                                                                                                                                
+                </h:panelGrid>                
                 <br />
                 <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る"/>
                 <br />
