Enhanced: Re-Layout the Monster List

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,7 +28,13 @@
                 <h:commandLink action="/monsterMaster/List" value="モンスター一覧"/>
             </h:form>
         </p>            
-    </h:body>
+        <p>
+            <h:form>
+                <h:commandLink action="/typeMaster/List" value="モンスター種別一覧"/>
+            </h:form>
+            </p>
+</h:body>
+
 
 
 
