--- a/web/monsterMaster/List.xhtml
+++ b/web/monsterMaster/List.xhtml
@@ -14,7 +14,7 @@
             <h:panelGroup id="messagePanel" layout="block">
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
-            <h:outputText escape="false" value="#{bundle.ListMonsterMasterEmpty}" rendered="#{monsterMasterController.items.rowCount == 0}"/>
+            <h:outputText escape="false" value="モンスターは登録されていません。" rendered="#{monsterMasterController.items.rowCount == 0}"/>
             <h:panelGroup rendered="#{monsterMasterController.items.rowCount > 0}">
                 <h:outputText value="#{monsterMasterController.pagination.pageFirstItem + 1}..#{monsterMasterController.pagination.pageLastItem + 1}/#{monsterMasterController.pagination.itemsCount}"/>&nbsp;
                 <h:commandLink action="#{monsterMasterController.previous}" value="#{bundle.Previous} #{monsterMasterController.pagination.pageSize}" rendered="#{monsterMasterController.pagination.hasPreviousPage}"/>&nbsp;
