--- a/web/monsterMaster/Create.xhtml
+++ b/web/monsterMaster/Create.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateMonsterMasterTitle}"></h:outputText>
+            <h:outputText value="モンスターの作成"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
@@ -15,59 +15,59 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="6">
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_name}" for="name" />
+                    <h:outputLabel value="name" for="name" />
                     <h:inputText id="name" value="#{monsterMasterController.selected.name}" title="#{bundle.CreateMonsterMasterTitle_name}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_sizeId}" for="sizeId" />
+                    <h:outputLabel value="sizeId" for="size" />
                     <h:selectOneMenu id="sizeId" value="#{monsterMasterController.selected.sizeId}" title="#{bundle.CreateMonsterMasterTitle_sizeId}" >                        
                         <f:selectItems value="#{sizeMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu> 
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_type}" for="type" />                    
+                    <h:outputLabel value="type" for="type" />                    
                     <h:selectOneMenu id="type" value="#{monsterMasterController.selected.type}" title="#{bundle.CreateMonsterMasterTitle_type}" >
                         <f:selectItems value="#{typeMasterController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_hitDiceType}" for="hitDiceType" />
+                    </h:selectOneMenu>                   
+                    <h:outputLabel value="hitDiceNum" for="hitDiceNum" />
+                    <h:inputText id="hitDiceNum" value="#{monsterMasterController.selected.hitDiceNum}" title="#{bundle.CreateMonsterMasterTitle_hitDiceNum}" />
+                    <h:outputLabel value="hitDiceType" for="hitDiceType" />
                     <h:selectOneMenu id="hitDiceType" value="#{monsterMasterController.selected.hitDiceType}" title="#{bundle.CreateMonsterMasterTitle_hitDiceType}" >
                         <f:selectItems value="#{diceMasterController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>                    
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_hitDiceNum}" for="hitDiceNum" />
-                    <h:inputText id="hitDiceNum" value="#{monsterMasterController.selected.hitDiceNum}" title="#{bundle.CreateMonsterMasterTitle_hitDiceNum}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_initiative}" for="initiative" />
+                    </h:selectOneMenu> 
+                    <h:outputLabel value="initiative" for="initiative" />
                     <h:inputText id="initiative" value="#{monsterMasterController.selected.initiative}" title="#{bundle.CreateMonsterMasterTitle_initiative}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_speed}" for="speed" />
+                    <h:outputLabel value="speed" for="speed" />
                     <h:inputText id="speed" value="#{monsterMasterController.selected.speed}" title="#{bundle.CreateMonsterMasterTitle_speed}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_ac}" for="ac" />
+                    <h:outputLabel value="ac" for="ac" />
                     <h:inputText id="ac" value="#{monsterMasterController.selected.ac}" title="#{bundle.CreateMonsterMasterTitle_ac}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_acTouch}" for="acTouch" />
+                    <h:outputLabel value="acTouch" for="acTouch" />
                     <h:inputText id="acTouch" value="#{monsterMasterController.selected.acTouch}" title="#{bundle.CreateMonsterMasterTitle_acTouch}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_acFlatFooted}" for="acFlatFooted" />
+                    <h:outputLabel value="acFlatFooted" for="acFlatFooted" />
                     <h:inputText id="acFlatFooted" value="#{monsterMasterController.selected.acFlatFooted}" title="#{bundle.CreateMonsterMasterTitle_acFlatFooted}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_baseAttack}" for="baseAttack" />
+                    <h:outputLabel value="baseAttack" for="baseAttack" />
                     <h:inputText id="baseAttack" value="#{monsterMasterController.selected.baseAttack}" title="#{bundle.CreateMonsterMasterTitle_baseAttack}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_grapple}" for="grapple" />
+                    <h:outputLabel value="grapple" for="grapple" />
                     <h:inputText id="grapple" value="#{monsterMasterController.selected.grapple}" title="#{bundle.CreateMonsterMasterTitle_grapple}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_attack}" for="attack" />
+                    <h:outputLabel value="attack" for="attack" />
                     <h:inputText id="attack" value="#{monsterMasterController.selected.attack}" title="#{bundle.CreateMonsterMasterTitle_attack}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_reach}" for="reach" />
+                    <h:outputLabel value="reach" for="reach" />
                     <h:inputText id="reach" value="#{monsterMasterController.selected.reach}" title="#{bundle.CreateMonsterMasterTitle_reach}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_specialAttacks}" for="specialAttacks" />
+                    <h:outputLabel value="specialAttacks" for="specialAttacks" />
                     <h:inputText id="specialAttacks" value="#{monsterMasterController.selected.specialAttacks}" title="#{bundle.CreateMonsterMasterTitle_specialAttacks}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_specialQualities}" for="specialQualities" />
+                    <h:outputLabel value="specialQualities" for="specialQualities" />
                     <h:inputText id="specialQualities" value="#{monsterMasterController.selected.specialQualities}" title="#{bundle.CreateMonsterMasterTitle_specialQualities}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_environment}" for="environment" />
+                    <h:outputLabel value="environment" for="environment" />
                     <h:inputText id="environment" value="#{monsterMasterController.selected.environment}" title="#{bundle.CreateMonsterMasterTitle_environment}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_organization}" for="organization" />
+                    <h:outputLabel value="organization" for="organization" />
                     <h:inputText id="organization" value="#{monsterMasterController.selected.organization}" title="#{bundle.CreateMonsterMasterTitle_organization}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_challengeRating}" for="challengeRating" />
+                    <h:outputLabel value="challengeRating" for="challengeRating" />
                     <h:inputText id="challengeRating" value="#{monsterMasterController.selected.challengeRating}" title="#{bundle.CreateMonsterMasterTitle_challengeRating}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_treasure}" for="treasure" />
+                    <h:outputLabel value="treasure" for="treasure" />
                     <h:inputText id="treasure" value="#{monsterMasterController.selected.treasure}" title="#{bundle.CreateMonsterMasterTitle_treasure}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_advancement}" for="advancement" />
+                    <h:outputLabel value="advancement" for="advancement" />
                     <h:inputText id="advancement" value="#{monsterMasterController.selected.advancement}" title="#{bundle.CreateMonsterMasterTitle_advancement}" />
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_alignment}" for="alignment" />
+                    <h:outputLabel value="alignment" for="alignment" />
                     <h:selectOneMenu id="alignment" value="#{monsterMasterController.selected.alignment}" title="#{bundle.CreateMonsterMasterTitle_alignment}" >
                         <f:selectItems value="#{alignmentMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>                    
-                    <h:outputLabel value="#{bundle.CreateMonsterMasterLabel_levelAdjustment}" for="levelAdjustment" />
+                    <h:outputLabel value="levelAdjustment" for="levelAdjustment" />
                     <h:inputText id="levelAdjustment" value="#{monsterMasterController.selected.levelAdjustment}" title="#{bundle.CreateMonsterMasterTitle_levelAdjustment}" />
                 </h:panelGrid>
                 <br />
