Enhanced: Added ScenarioRecord page

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -33,7 +33,19 @@
                 <h:commandLink action="/typeMaster/List" value="モンスター種別一覧"/>
             </h:form>
             </p>
+                <h:form>
+                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/scenarioCharacterRecord/List" value="Show All ScenarioCharacterRecord Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
+                </h:form>
 </h:body>
+
+
+
 
 
 
