Changed: modified configuration files

--- a/web/typeMaster/List.xhtml
+++ b/web/typeMaster/List.xhtml
@@ -36,11 +36,11 @@
                         <f:facet name="header">
                             <h:outputText value="&nbsp;"/>
                         </f:facet>
-                        <h:commandLink action="#{typeMasterController.prepareView}" value="ViewLink" />
+                        <h:commandLink action="#{typeMasterController.prepareView}" value="View" />
                         <h:outputText value=" "/>
-                        <h:commandLink action="#{typeMasterController.prepareEdit}" value="EditLink" />
+                        <h:commandLink action="#{typeMasterController.prepareEdit}" value="Edit" />
                         <h:outputText value=" "/>
-                        <h:commandLink action="#{typeMasterController.destroy}" value="DestroyLink" />
+                        <h:commandLink action="#{typeMasterController.destroy}" value="Destroy" />
                     </h:column>
                 </h:dataTable>
             </h:panelGroup>
