--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -30,19 +30,11 @@
         </p>            
         <p>
             <h:form>
-                <h:commandLink action="/typeMaster/List" value="モンスター種別一覧"/>
+                <h:commandLink action="/typeMaster/List" value="種別一覧"/>
             </h:form>
-            </p>
-                <h:form>
-                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/scenarioCharacterRecord/List" value="Show All ScenarioCharacterRecord Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
-                </h:form>
-</h:body>
+        </p>
+
+    </h:body>
 
 
 
