--- a/web/monsterMaster/Edit.xhtml
+++ b/web/monsterMaster/Edit.xhtml
@@ -11,7 +11,11 @@
         </ui:define>
 
         <ui:define name="control">
-            <h:commandButton action="#{monsterMasterController.update}" value="保存"/>
+            <h:panelGrid columns="3">
+                <h:commandButton style="text-align: left" action="#{monsterMasterController.update}" value="保存"/>                
+                <h:outputLabel value="       "/>
+                <h:commandButton style="text-align: right" action="#{monsterMasterController.destroyAndView}" value="削除"/>            
+            </h:panelGrid>
             <br />
             <br />
             <h:commandLink action="#{monsterMasterController.prepareList}" value="モンスター一覧へ" immediate="true"/>
