--- a/web/monsterMaster/List.xhtml
+++ b/web/monsterMaster/List.xhtml
@@ -38,7 +38,7 @@
                         </f:facet>
                         <h:commandLink action="#{monsterMasterController.prepareEdit}" value="編集"/>
                         <h:outputText value=" "/>
-                        <h:commandLink action="#{monsterMasterController.destroy}" value="削除"/>
+                        <h:commandLink action="#{monsterMasterController.destroy}" onclick="return confirm('削除しますか?')" value="削除"/>
                     </h:column>
                 </h:dataTable>
             </h:panelGroup>
